# icfpc2024

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TASK.md
.cloudbuild/: deploy-server.yaml  deploy.yaml
3d/: 1.ipynb  10.txt  1c.txt  3d10.solve  3d2-loop.txt  3d2.solve  3d3.solve  3d4.solve  3d5.solve  3d6.solve  3d7.solve  3d9.solve  7.txt  8.txt  memo1.txt  memo10.txt  memo11.txt  memo2.txt  memo3.txt  memo4.txt  memo5.txt  memo6.txt  memo7.txt  memo8.txt
3d/tools/: Cargo.toml  out.txt
3d/web/: Cargo.toml  build.sh  index.html  random_name.sh
best/3d1/: request.txt  response.txt  response_decoded.txt
best/3d10/: request.txt  response.txt  response_decoded.txt
best/3d11/: request.txt  response.txt  response_decoded.txt
best/3d12/: request.txt  response.txt  response_decoded.txt
best/3d2/: request.txt  response.txt  response_decoded.txt
best/3d3/: request.txt  response.txt  response_decoded.txt
best/3d4/: request.txt  response.txt  response_decoded.txt
best/3d5/: request.txt  response.txt  response_decoded.txt
best/3d6/: request.txt  response.txt  response_decoded.txt
best/3d7/: request.txt  response.txt  response_decoded.txt
best/3d8/: request.txt  response.txt  response_decoded.txt
best/3d9/: request.txt  response.txt  response_decoded.txt
best/efficiency1/: request.txt  response.txt  response_decoded.txt
best/efficiency10/: request.txt  response.txt  response_decoded.txt
best/efficiency11/: request.txt  response.txt  response_decoded.txt
best/efficiency12/: request.txt  response.txt  response_decoded.txt
best/efficiency13/: request.txt  response.txt  response_decoded.txt
best/efficiency2/: request.txt  response.txt  response_decoded.txt
best/efficiency3/: request.txt  response.txt  response_decoded.txt
best/efficiency4/: request.txt  response.txt  response_decoded.txt
best/efficiency5/: request.txt  response.txt  response_decoded.txt
best/efficiency6/: request.txt  response.txt  (+1 more)
configs/: service_account.json.encrypted
docker/: Makefile  builder.Dockerfile  phpmyadmin.Dockerfile  runner.Dockerfile  server.Dockerfile  tools.Dockerfile
docs/: ICFP.md
efficiency/: smt-task10-v2.ipynb  smt-task10.ipynb  smt-task11.ipynb  smt-task9.ipynb
iwiwi/: Untitled.ipynb
lambdaman/: 7.icfp  doubling_5_v1.icfp  doubling_5_v2.icfp  doubling_5_v3.icfp  hoge.ipynb  lcg-rand.icfp  lcg-rand2.icfp  lcg-rand_11.icfp  lcg-rand_11_v2.icfp  lcg-rand_12.icfp  lcg-rand_13.icfp  lcg-rand_14.icfp  lcg-rand_15.icfp  lcg-rand_15_2x.icfp  lcg-rand_16.icfp  lcg-rand_18.icfp  lcg-rand_21.icfp  lcg-rand_4_no-c_no-take.icfp  scores.py  str_tle_check.icfp  tmp.icfp
lkh/: doit.py
local_tester/: Cargo.toml  README.md  ahc.toml
local_tester/default_vis/: index.html
local_tester/src/: main.rs  web.rs
local_tester/templates/: list.html  plot.html  recent.html  result.html
scripts/: deploy_binaries.sh
src/: encryption.rs  eval.rs  eval2.rs  lambdaman.rs  lib.rs  pp.rs  sql.rs
static/: style.css
tos/: 3d12-1764.txt  3d12-2250.txt  3d12.txt  3d2.txt  3d6.txt  Untitled-2.txt  Untitled-4.txt  cbv-1.txt  chokudai-random.txt  eff12.py  hilbertcurve.txt  memo19.txt
vis/: Cargo.toml  index.html
(+185 files in other folders)
