[package]
name = "icfpc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "reqwest", "actix-web", "actix-files", "mysql", "resvg"]

[dependencies]
itertools = "0.10.3"
once_cell = "1.13.1"
rand = "0.8.5"
# rayon = "1.5"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
indicatif = "0.17.0"
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
svg = "0.13.1"
anyhow = "1.0.71"
actix-web = { version = "4.0.0-beta.9", optional = true }
actix-files = { version = "0.6.2", optional = true }
handlebars = "3"
mysql = { version = "20.1.0", optional = true }
resvg = { version = "0.35.0", optional = true }
chrono-humanize = "0.2.2"
chrono = "0.4.26"
num-bigint = "0.4.6"
clap = { version = "4.5.7", features = ["derive"] }
num-traits = "0.2"
num = { version = "0.4.3", features = ["num-bigint"] }

[profile.release]
debug = true
