[package]
name = "ahc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
duct = "0.13.6"
fs2 = "0.4.3"
futures = "0.3.28"
handlebars = "4.4.0"
indicatif = "0.17.7"
itertools = "0.11.0"
once_cell = "1.18.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
tempfile = "3.8.0"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
